WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275409
IPC testing API is unable to reply with nullopt optional
https://bugs.webkit.org/show_bug.cgi?id=275409
Summary
IPC testing API is unable to reply with nullopt optional
Kimmo Kinnunen
Reported
2024-06-12 10:58:10 PDT
IPC testing API is unable to reply with nullopt optional
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2024-06-12 10:58:41 PDT
<
rdar://129669346
>
Kimmo Kinnunen
Comment 2
2024-06-12 11:56:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29756
EWS
Comment 3
2024-06-13 23:17:12 PDT
Committed
279999@main
(8ebae84b5572): <
https://commits.webkit.org/279999@main
> Reviewed commits have been landed. Closing PR #29756 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug