Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp
@@ -527,8 +527,8 @@ static JSValueRef jsSendWithAsyncReply(IPC::Connection& connection, uint64_t des
                 jsResult = jsResultFromReplyDecoder(globalObject, messageName, *replyDecoder);
             JSValueRef arguments[1] = { nullptr };
             if (auto* exception = scope.exception()) {
-                scope.clearException();
                 arguments[0] = toRef(globalObject, exception);
+                scope.clearException();
             } else
                 arguments[0] = toRef(globalObject, jsResult);
             JSObjectCallAsFunction(context, callback, callback, 1, arguments, nullptr);
